--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
     <footer class="py-4 text-center">
         <div class="container">
             <p class="mb-0">&copy; 2025 KEY-কী. All rights reserved.</p>
+            <p class="mb-0">Design & Developed by <a href="https://www.linkedin.com/in/iamashruu">Ashraf</a> </p>
         </div>
     </footer>
 
